# recipe_crawler

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
recipe_crawler/recipe_crawler/: settings.py
recipe_crawler/recipe_crawler/spiders/: kurashiru.py
