[tool.poetry]
name = "recipe-crawler"
version = "0.1.0"
description = ""
authors = ["kishimoto <drehbleistift@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
